deployment/myfirstgolang.yaml
#apiVersion: v1
#kind: Namespace
#metadata:
#  name: demo-proto-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-proto-go
  namespace: demo-proto-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-proto-go
  template:
    metadata:
      labels:
        app: demo-proto-go
    spec:
      containers:
        - name: demo-go-container
          image: andyglen/myfirstgolang:v5
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: demo-go-service-clusterip
  namespace: demo-proto-ns
spec:
  selector:
    app: demo-proto-go
  type: NodePort
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8000
      nodePort: 30391
