deployment/ingress-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-path
  namespace: demo-proto-ns
spec:
  ingressClassName: nginx
  rules:
#    - host: all.demo.com
    - http:
        paths:
          - pathType: Prefix
            path: /testAPI
            backend:
              service:
                name: beta-app-service-clusterip
                port:
                  number: 8081
          - pathType: Prefix
            path: /
            backend:
              service:
                name: demo-go-service-clusterip
                port:
                  number: 8081
